# flightsim-mapkit

./: Cargo.toml  build.rs
src/: fs_connect.rs  main.rs  mapwidget.html
src/webui/: index.html
src/webui/js/: main.js
