[package]
name = "flightsim-mapkit"
version = "0.1.0"
authors = ["Yuri Krupenin <yuri.krupenin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.5.4", features = ["edge"] } 
simconnect = "0.1"