[package]
name = "flightsim-mapkit"
version = "0.1.0"
authors = ["Yuri Krupenin <yuri.krupenin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpx = { version = "0.8.1" }
tinyfiledialogs = { version = "3.3.10" }
web-view = { version = "0.5.4", features = ["edge"] } 

[target.'cfg(windows)'.dependencies]
simconnect = { version = "0.1", optional = true }

[features]
position-update = ['simconnect']